infrastructure/registry/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - name: registry
      port: 5000
      targetPort: registry
